# build-bridge

./: .gitignore  CLAUDE.md  README.md  build-agent-mvp.md  pyproject.toml
build_bridge/: agent_protocol.py  agent_server.py  agent_spawner.py  agent_store.py  agent_wrapper.py  auth.py  build_agent.py  chat_mcp.py  cli.py  codex_agent.py  codex_app_server.py  complications.py  ctl.py  daemon.py  e2ee.py  harness_registry.py  workspace_watcher.py  ws.py
build_bridge/harnesses/: codex.json
build_client/: __init__.py  agent_protocol.py  agent_server.py  agent_spawner.py  agent_store.py  agent_wrapper.py  auth.py  build_agent.py  build_chat_bridge.py  chat_mcp.py  cli.py  codex_agent.py  codex_app_server.py  complications.py  config.py  ctl.py  daemon.py  e2ee.py  harness_registry.py  storage.py  ws.py
build_client/harnesses/: claude-code.json  codex.json
tests/: test_agent_protocol.py  test_agent_server.py  test_agent_spawner.py  test_agent_store.py  test_agent_wrapper.py  test_auth.py  test_build_agent.py  test_channel_list_running.py  test_chat_mcp.py  test_codex_agent.py  test_complications.py  test_config.py  test_file_embeds.py  test_file_revisions.py  test_harness_registry.py  test_upload_dest_dir.py  test_ws.py
