[project]
name = "build-client"
version = "0.1.0"
description = "Build device client — authenticates with the Build server and maintains a persistent WebSocket connection."
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "websockets>=15.0",
]

[project.scripts]
build-device = "build_client.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
