[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build-bridge"
version = "0.1.0"
description = "Build Bridge — device client that authenticates with the Build server and maintains a persistent WebSocket connection."
requires-python = ">=3.12"
dependencies = [
    "build-secure-transport",
    "claude-agent-sdk>=0.1.60",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "mcp>=1.6.0",
    "websockets>=15.0",
]

[tool.uv.sources]
build-secure-transport = { path = "../build-secure-transport/python" }

[project.scripts]
build = "build_bridge.cli:main"
build-agent = "build_bridge.build_agent:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
